force-app/main/default/objects/Distributor__c/fields/Additional_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>non-primary email contact for distributor (use Primary Email first)</description>
    <label>Additional Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>