force-app/main/default/objects/Distributor__c/fields/Distribution_Contract__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>because Salesforce is GARBAGE</description>
    <label>Distribution Contract</label>
    <referenceTo>Distribution_Contract__c</referenceTo>
    <relationshipLabel>Distributors</relationshipLabel>
    <relationshipName>Distributors</relationshipName>
    <type>Lookup</type>
</CustomField>