force-app/main/default/objects/Distributor__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>main telephone number to call distributor</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>