force-app/main/default/objects/Distributor__c/fields/Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>this is the primary email address used to contact the distributor</description>
    <label>Primary Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>