force-app/main/default/objects/Distributor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Distribution_Contract__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>